Using ViewBag | Comunication from Controller to View

--- a/Empresa.ProdutoNomeAplicacaoTesteASPNETMVC.Web/Views/Teste/Index.cshtml
+++ b/Empresa.ProdutoNomeAplicacaoTesteASPNETMVC.Web/Views/Teste/Index.cshtml
@@ -4,5 +4,12 @@
 }
 
 <h2>Index</h2>
-<p>Esse é o teste do ASP.NET MVC</p>
-<p>Estou vendo se está chamando a Action mesmo.</p>
+<br />
+<br />
+<p>Digite seu nome:</p>
+@using (Html.BeginForm("Index", "Teste", FormMethod.Post))
+{
+    <input type="text" id="txbNome" name="nome" />
+
+    <input type="submit" value="Enviar!"/>
+}
