Model Binder | Passagem de parâmetro como Classe | Helper LabelFor TextBoxFor |

--- a/Empresa.ProdutoNomeAplicacaoTesteASPNETMVC.Web/Views/Teste/Index.cshtml
+++ b/Empresa.ProdutoNomeAplicacaoTesteASPNETMVC.Web/Views/Teste/Index.cshtml
@@ -1,4 +1,6 @@
-﻿
+﻿@using Empresa.ProdutoNomeAplicacaoTesteASPNETMVC.Web.Models
+@model Pessoa
+
 @{
     ViewBag.Title = "Index";
 }
@@ -9,7 +11,14 @@
 <p>Digite seu nome:</p>
 @using (Html.BeginForm("Index", "Teste", FormMethod.Post))
 {
-    @Html.TextBox("nome", null, new { id = "txbNome" })
+    @Html.LabelFor(p => p.Nome)
+    @Html.TextBoxFor(p => p.Nome, new {id = "txbNome"})
+
+    @Html.LabelFor(p => p.Idade)
+    @Html.TextBoxFor(p => p.Idade)
+
+    @Html.LabelFor(p => p.Endereco)
+    @Html.TextBoxFor(p => p.Endereco)
 
     <input type="submit" value="Enviar!"/>
 }
