--- a/Empresa.ProdutoNomeAplicacaoTesteASPNETMVC.Web/Views/Frases/Index.cshtml
+++ b/Empresa.ProdutoNomeAplicacaoTesteASPNETMVC.Web/Views/Frases/Index.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@using Empresa.ProdutoNomeAplicacaoTesteASPNETMVC.Web.Models
+@model Frase
 @{
     ViewBag.Title = "Index";
 }
@@ -10,7 +11,15 @@
 <p>Digite a Frase:</p>
 @using(Html.BeginForm("Index", "Frases", FormMethod.Post))
 {
-    @Html.TextBox("frase", null, new {id = "txbFrase"})
+    @Html.LabelFor(f => f.Descricao)
+    @Html.TextBoxFor(f => f.Descricao, new {id = "txbFrase"})
+    <br /> <br />
+
+    @Html.LabelFor(f => f.Categoria)
+    @Html.TextBoxFor(f => f.Categoria)
+
+    @Html.LabelFor(f => f.Likes)
+    @Html.TextBoxFor(f => f.Likes)
 
     <input type="submit" value="Enviar" />
 }
