ComponentModel | Validação Client Side | Data Notations

--- a/Empresa.ProdutoNomeAplicacaoTesteASPNETMVC.Web/Views/Frases/Confirmacao.cshtml
+++ b/Empresa.ProdutoNomeAplicacaoTesteASPNETMVC.Web/Views/Frases/Confirmacao.cshtml
@@ -11,5 +11,5 @@
 
 <p>@Model.Descricao</p>
 
-@Html.Label("Categoria: ") @Html.EditorFor(f => f.Categoria)
-@Html.Label("Likes: ") @Html.EditorFor(f => f.Likes)
+@Html.LabelFor(f => f.Categoria) @Html.EditorFor(f => f.Categoria)
+@Html.LabelFor(f => f.Likes) @Html.EditorFor(f => f.Likes)
