--- a/Empresa.ProdutoNomeAplicacaoTesteASPNETMVC.Web/Views/Teste/Saudacao.cshtml
+++ b/Empresa.ProdutoNomeAplicacaoTesteASPNETMVC.Web/Views/Teste/Saudacao.cshtml
@@ -8,5 +8,6 @@
 <h2>Saudacao</h2>
 
 <p>Olá, seja bem vindo @Model.Nome</p>
-@Html.Label("Idade: ") @Html.EditorFor(p => p.Idade)
-@Html.Label("Endereço: ") @Html.EditorFor(p => p.Endereco)
+@Html.LabelFor(p => p.Idade) @Html.EditorFor(p => p.Idade)
+@Html.LabelFor(p => p.Endereco) @Html.EditorFor(p => p.Endereco)
+@Html.LabelFor(p => p.Email) @Html.EditorFor(p => p.Email)
